# rules_oci

e2e/pytorch_cuda/: BUILD.bazel  WORKSPACE  test.tar  test.tar.xz
